# essentially-contested-morl

./: .apptainerignore  .gitignore  README.md  algorithm classification.md  daic_try.sh  eum_over_time.csv  eval_ff.ipynb  four_room_pareto_front copy.ipynb  four_room_pareto_front.ipynb  job.sh  job_firefighters_baselines.sh  main.py  morld_four_room.html  morld_four_room_original.html  pyproject.toml  requirements.txt  small_MORLD_four_room_full.md  try_wandb_plot.py  visualize_human_distribution.ipynb  wandb_export_2026-04-22T14_42_54.309+02_00.csv  weight_coverage_explainer.html
agent/: conditioned_ecc_envelope_.py  ecc_envelope copy.py  ecc_envelope.py  ecc_envelope_weight_adapt.py  ecc_gpi_pd.py  ecc_pareto_dqn.py  ecc_pql.py  envelope.py  gpi_pd.py  lex_agents.py  my_mo_agent.py  pareto_dqn.py  pdql.py  pql.py  ucb_envelope.py
apptainer_defs/: Apptainer example.def  Apptainer.def  Apptainer.morld_py312.def  Makefile  README.md  build.sh  build_gpi_four_room.sh  check-dependencies.sh  clean.sh  deploy.sh  environment.yml  gpi_pd_four_room.def  inspect.sh  params.sh  requirements.txt  stage.sh  test.sh  validate.sh
docs/: hv_meta_reward_plan.md
env/: __init__.py  baseline_fire_rescue.py  fire_rescue.py  fire_rescue_env.py  firefighters_ecc.py  firefighters_env.py  firefighters_env_mo.py  mce_partition.py  multi_objective_grid_world.py  multivalued_car_env.py  my_four_room.py  reach_goal.py  reach_goal_ecc.py  tabularVAenv.py  wrappers.py
eval_returns/: eval_returns_four_room_gpi-pd_weight_0.0_1.0_1777885103.csv  plot_returns.ipynb
lex_agents/: envs.py  (+3 more)
(+137 files in other folders)
